fix rendering issue when moving the thumb on safari browser and on osx browsers

--- a/index.scss
+++ b/index.scss
@@ -152,6 +152,8 @@ $thumbActiveMove: 4.5px;
         left: 0;
         background-color: var(--thumbCircleBlurredColor);
         filter: blur(30px);
+        backface-visibility: hidden;
+        transform: translate3d(0, 0, 0); // Force hardware acceleration
       }
 
       &::after {
@@ -165,6 +167,8 @@ $thumbActiveMove: 4.5px;
         background: var(--thumbCircleOverlayBackgroundColor);
         box-shadow: var(--thumbCircleOverlayBoxShadow);
         filter: blur(0.642px);
+        backface-visibility: hidden;
+        transform: translate3d(0, 0, 0); // Force hardware acceleration
       }
 
       &:hover::after {
